@@ -2,10 +2,12 @@ package com.project.blog.security;
 
 import com.project.blog.model.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class AppUserDetails implements UserDetails{
 
@@ -17,7 +19,7 @@ public class AppUserDetails implements UserDetails{
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // No roles yet
+        return List.of(new SimpleGrantedAuthority(user.getRole()));
     }
 
     @Override
